--- a/JETRoute_DataView-2.1/Storyboards/Base.lproj/Main.storyboard
+++ b/JETRoute_DataView-2.1/Storyboards/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Vwu-PB-q6C">
-    <device id="ipad12_9" orientation="landscape">
+    <device id="ipad9_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -14,17 +14,74 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="JETRoute_DataView_2_1" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.81012505292892456" green="0.93153280019760132" blue="0.95086294412612915" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                    <view key="view" contentMode="scaleToFill" id="S44-9E-Uxd">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your route for this leg is:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I6y-bW-bwY">
+                                <rect key="frame" x="286.5" y="124" width="195" height="21"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Route Entered Here" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U21-Bb-2VV">
+                                <rect key="frame" x="306" y="183" width="156" height="33"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2sb-Xs-1NU">
+                                <rect key="frame" x="261" y="183" width="45" height="33"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                <state key="normal" title="KDEP">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="depAirportButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fl6-N6-xWE"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1xR-TP-MlU">
+                                <rect key="frame" x="462" y="183" width="46" height="33"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                <state key="normal" title="KARR">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="arrAirportButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="T2M-cw-xKP"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap airport code for frequencies" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hEG-MT-fEa" userLabel="Tap message label">
+                                <rect key="frame" x="286.5" y="224" width="195" height="16"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.86046653985977173" green="0.93715280294418335" blue="0.96242648363113403" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="U21-Bb-2VV" firstAttribute="leading" secondItem="2sb-Xs-1NU" secondAttribute="trailing" id="2Pw-HE-tqg"/>
+                            <constraint firstItem="1xR-TP-MlU" firstAttribute="centerY" secondItem="U21-Bb-2VV" secondAttribute="centerY" id="2oj-fL-D6b"/>
+                            <constraint firstItem="2sb-Xs-1NU" firstAttribute="height" secondItem="U21-Bb-2VV" secondAttribute="height" id="3Ke-eK-uNc"/>
+                            <constraint firstItem="I6y-bW-bwY" firstAttribute="centerX" secondItem="O0A-AX-VWf" secondAttribute="centerX" id="Hvo-Ck-oVc"/>
+                            <constraint firstItem="1xR-TP-MlU" firstAttribute="leading" secondItem="U21-Bb-2VV" secondAttribute="trailing" id="Kh1-7V-NVy"/>
+                            <constraint firstItem="2sb-Xs-1NU" firstAttribute="centerY" secondItem="U21-Bb-2VV" secondAttribute="centerY" id="Kta-HZ-Rkx"/>
+                            <constraint firstItem="U21-Bb-2VV" firstAttribute="centerX" secondItem="O0A-AX-VWf" secondAttribute="centerX" id="LBX-ug-0mi"/>
+                            <constraint firstItem="U21-Bb-2VV" firstAttribute="top" secondItem="I6y-bW-bwY" secondAttribute="bottom" constant="38" id="SFt-6J-NLB"/>
+                            <constraint firstItem="1xR-TP-MlU" firstAttribute="height" secondItem="U21-Bb-2VV" secondAttribute="height" id="mmF-23-puI"/>
+                            <constraint firstItem="hEG-MT-fEa" firstAttribute="centerX" secondItem="O0A-AX-VWf" secondAttribute="centerX" id="n1L-Em-VIv"/>
+                            <constraint firstItem="hEG-MT-fEa" firstAttribute="top" secondItem="U21-Bb-2VV" secondAttribute="bottom" constant="8" id="nzT-pb-kzG"/>
+                            <constraint firstItem="I6y-bW-bwY" firstAttribute="top" secondItem="O0A-AX-VWf" secondAttribute="top" constant="54" id="rUN-Mp-yar"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="O0A-AX-VWf"/>
                     </view>
                     <navigationItem key="navigationItem" title="JETRoute" id="Fcj-og-dMz"/>
+                    <connections>
+                        <outlet property="arrButton" destination="1xR-TP-MlU" id="l48-rm-EF3"/>
+                        <outlet property="depButton" destination="2sb-Xs-1NU" id="bXV-uA-NEf"/>
+                        <outlet property="routeLabel" destination="U21-Bb-2VV" id="UQp-wt-Obq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="607" y="360"/>
+            <point key="canvasLocation" x="808.59375" y="343.9453125"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="7Vf-Ah-dRr">
@@ -32,7 +89,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Vwu-PB-q6C" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kuH-cO-hcA">
-                        <rect key="frame" x="0.0" y="20" width="1366" height="50"/>
+                        <rect key="frame" x="0.0" y="20" width="768" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
